<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_300sdp"
        app:srcCompat="@drawable/splash_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_startGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btn_startGame"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_game"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/btn_customWords"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:text="@string/btn_custom_words"
        app:layout_constraintTop_toBottomOf="@id/btn_multiplayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_multiplayer"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:text="@string/btn_multiplayer"
        app:layout_constraintTop_toBottomOf="@id/btn_startGame"
        app:layout_constraintBottom_toTopOf="@+id/btn_customWords"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>