<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/lang_radio"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/lang_english"
            android:layout_marginLeft="@dimen/marginRightLeft_radio_btn"
            android:layout_marginRight="@dimen/marginRightLeft_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/lang_russian"
            android:layout_marginLeft="@dimen/marginRightLeft_radio_btn"
            android:layout_marginRight="@dimen/marginRightLeft_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

        <Button
            android:id="@+id/btn_language_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/btn_change_lang" />
    </RadioGroup>
</LinearLayout>
