...
        <br>Felix Wallner\n</br>
        <br>Egirin Gega</br>
    </string>


<!--    HamburgerMenuPage:-->
    <string name="about_link">About</string>
    <string name="language_link">Language</string>


<!--    Change Language-->
    <string name="lang_dialog_title">Change Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
...
