<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPageActivity">

    <TextView
        android:id="@+id/text_aboutPage_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutPage_general"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_aboutPage_team"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/text_aboutPage_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutPage_team"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/text_aboutPage_general"
        app:layout_constraintBottom_toTopOf="@id/text_aboutPage_prod_owner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/text_aboutPage_prod_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/aboutPage_product_owner"
        app:layout_constraintTop_toBottomOf="@id/text_aboutPage_team"
        app:layout_constraintBottom_toTopOf="@id/text_aboutPage_scrum_master"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/text_aboutPage_scrum_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/aboutPage_scrum_master"
        app:layout_constraintTop_toBottomOf="@id/text_aboutPage_prod_owner"
        app:layout_constraintBottom_toTopOf="@id/text_aboutPage_devs"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/text_aboutPage_devs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/aboutPage_developers"
        app:layout_constraintTop_toBottomOf="@id/text_aboutPage_scrum_master"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>