<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomWordsActivity">

    <EditText
        android:id="@+id/editText_customWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_CW_editText"
        android:layout_marginLeft="@dimen/marginStart_CW_editText"
        android:paddingTop="@dimen/paddingTop_CW_editText"
        android:ems="10"
        android:hint="@string/edit_word"
        app:layout_constraintBottom_toTopOf="@id/lst_custom_words"
        app:layout_constraintEnd_toStartOf="@id/btn_save_word"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="top"/>

    <Button
        android:id="@+id/btn_save_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginAll_save_CW_button"
        android:layout_marginLeft="@dimen/marginAll_save_CW_button"
        android:layout_marginEnd="@dimen/marginAll_save_CW_button"
        android:layout_marginRight="@dimen/marginAll_save_CW_button"
        android:text="@string/btn_save"
        app:layout_constraintStart_toEndOf="@id/editText_customWords"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel_word"
        app:layout_constraintBaseline_toBaselineOf="@id/editText_customWords"/>

    <Button
        android:id="@+id/btn_cancel_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintStart_toEndOf="@id/btn_save_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/editText_customWords"
        android:layout_marginEnd="@dimen/marginAll_save_CW_button"
        android:layout_marginRight="@dimen/marginAll_save_CW_button"
        android:visibility="gone"/>

    <include
        layout="@layout/lbl_custom_words_list"
        android:id="@+id/incl_caption_custom_words_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_lbl_CW_list"
        android:layout_marginBottom="@dimen/marginBottom_lbl_CW_list"
        android:layout_marginLeft="@dimen/marginStart_lbl_CW_list"
        android:layout_marginRight="@dimen/marginStart_lbl_CW_list"
        android:paddingBottom="@dimen/paddingBottom_lbl_CW_list"
        app:layout_constraintTop_toBottomOf="@id/editText_customWords"
        app:layout_constraintBottom_toTopOf="@id/lst_custom_words"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

        <ListView
        android:id="@+id/lst_custom_words"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fixedHeight_CW_list"
        android:layout_marginLeft="@dimen/marginStart_lbl_CW_list"
        android:layout_marginRight="@dimen/marginStart_lbl_CW_list"
        app:layout_constraintTop_toBottomOf="@id/editText_customWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="visible"
        />




</androidx.constraintlayout.widget.ConstraintLayout>