<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/li_customWord_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopBottom_CW_li"
        android:layout_marginBottom="@dimen/marginTopBottom_CW_li"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_edit_CW"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_edit_CW"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/btn_edit_li"
        android:textSize="@dimen/textSize_btn_edit_delete_li"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_delete_CW"
        app:layout_constraintLeft_toRightOf="@id/li_customWord_text"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_delete_CW"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/btn_delete_li"
        android:textSize="@dimen/textSize_btn_edit_delete_li"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_edit_CW"
        android:layout_marginLeft="@dimen/marginStart_btn_delete_li"
        android:layout_marginStart="@dimen/marginStart_btn_delete_li"
        android:layout_marginRight="@dimen/marginEnd_btn_delete_li"
        android:layout_marginEnd="@dimen/marginStart_btn_delete_li"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>